fix(web-ui): make input fill wrapper height for consistent vertical alignment (#1555)

--- a/src/web-ui/src/component-library/components/Input/Input.scss
+++ b/src/web-ui/src/component-library/components/Input/Input.scss
@@ -127,6 +127,7 @@
 .bitfun-input {
   flex: 1;
   min-width: 0;
+  height: 100%;
   background: transparent;
   border: none !important;
   outline: none !important;
